React redux integration

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<title> Hello Redux</title>
 </head>
 <body>
-	<div id='app_root'></div>
+	<div id='app-root'></div>
 	<script src='bundle.js'></script>
 	<h1>Hello app</h1>
 </body>
