Connect react app to redux store

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
 <body>
 	<div id='app-root'></div>
 	<script src='bundle.js'></script>
-	<h1>Hello app</h1>
+	<!-- <h1>Hello app</h1> -->
 </body>
 </html>
